--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.15.18",
     "eslint": "9.26.0",
+    "prisma": "6.8.0",
     "tsup": "8.4.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "6.8.0",
     "dotenv": "16.5.0",
     "fastify": "5.3.3",
     "zod": "3.24.4"
