--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "3.0.0",
     "@types/node": "22.15.18",
     "eslint": "9.26.0",
     "prisma": "6.8.0",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.8.0",
+    "bcryptjs": "3.0.2",
     "dotenv": "16.5.0",
     "fastify": "5.3.3",
     "zod": "3.24.4"
