--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "03-api-solid",
   "packageManager": "yarn@4.9.1",
+  "type": "module",
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "3.0.0",
     "@types/node": "22.15.18",
+    "@vitest/coverage-v8": "3.1.3",
     "eslint": "9.26.0",
     "prisma": "6.8.0",
     "tsup": "8.4.0",
     "tsx": "4.19.4",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.1.3"
   },
   "dependencies": {
     "@prisma/client": "6.8.0",
