--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 NODE_ENV=dev
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# Auth
+JWT_SECRET=ignitenode03
+
+# Database
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
