--- a/package.json
+++ b/package.json
@@ -6,24 +6,30 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --project unit",
+    "test:e2e": "vitest run --project e2e",
+    "test:watch": "vitest --project unit",
+    "test:e2e:watch": "vitest --project e2e",
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "3.0.0",
     "@types/node": "22.15.18",
+    "@types/supertest": "6.0.3",
     "@vitest/coverage-v8": "3.1.3",
     "eslint": "9.26.0",
     "prisma": "6.8.0",
+    "supertest": "7.1.1",
     "tsup": "8.4.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
+    "vite": "6.3.5",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.1.3"
   },
   "dependencies": {
+    "@fastify/jwt": "9.1.0",
     "@prisma/client": "6.8.0",
     "bcryptjs": "3.0.2",
     "dayjs": "1.11.13",
