--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 22
-          cache: 'yarn'
+          cache: 'npm'
 
-      - run: yarn ci
+      - run: npm ci
 
-      - run: yarn test
+      - run: npm run test
